--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,9 +5,9 @@
     <div class="card" routerLinkActive="active"  (click)="navigateTo('javascript')">
       JavaScript
     </div>
-    <div class="card" routerLinkActive="active" (click)="navigateTo('typescript')">
+    <!-- <div class="card" routerLinkActive="active" (click)="navigateTo('typescript')">
       TypeScript
-    </div>
+    </div> -->
     <div class="card" routerLinkActive="active"  (click)="navigateTo('angular')">
       Angular
     </div>
