--- a/src/app/java-script/js/js.component.html
+++ b/src/app/java-script/js/js.component.html
@@ -1,30 +1,19 @@
 <div class="wraper">
-    <!-- <div class="title">
-        <h1>java-script</h1>
-    </div> -->
-
     <div class="list">
         <!-- Fundamentals -->
         <button class="styled" routerLink="controleflow">Control Flow </button>
         <button class="styled" routerLink="functions">Functions</button>
         <button class="styled" routerLink="array-methods">Array Methods</button>
-        <button class="styled" routerLink="errorhandling">Error Handling</button>
         <!-- Intermediate -->
         <button class="styled" routerLink="clousers">Closures</button>
-        <button class="styled" routerLink="context">this & Execution Context</button>
         <button class="styled" routerLink="prototypes">Prototypes & Inheritance</button>
-        <button class="styled" routerLink="async">Async Programming</button>
         <button class="styled" routerLink="promises">Promises & Async/Await</button>
-        <button class="styled" routerLink="e6">ES6+ Features</button>
-        <!-- Advanced -->
-        <button class="styled" routerLink="patterns">Design Patterns</button>
-        <button class="styled" routerLink="memory">Memory Management</button>
-        <button class="styled" routerLink="optimization">Performance Optimization</button>
-        <button class="styled" routerLink="modules">Module Systems</button>
-        <button class="styled" routerLink="browser-api">DOM & Browser APIs</button>
-        <button class="styled" routerLink="web-api">Web APIs</button>
+        <button class="styled" routerLink="dom">DOM Manipulation</button> 
+        <button class="styled" routerLink="math">Math</button>
+        <button class="styled" routerLink="date">Date & Time</button>
+        <button class="styled" routerLink="string-methods">String Methods</button>
+        <button class="styled" routerLink="interview-js">Interview-Js</button> 
     </div>
-
     <div class="sub-components-wraper">
         <router-outlet></router-outlet>
     </div>
